# ode-uq

./: README.md  pyproject.toml
examples/: scratch__testing.ipynb  test_comprehensive_dash.ipynb
examples/lorenz/: initial_state.yaml  lorenz.py  parameters.yaml
src/ode_uq/: __init__.py  model.py  plotting.py  sa.py  up.py  utils.py
tests/: README.md  test_parameter_distributions.py
